--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -7,19 +7,21 @@
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Sumāgadhā</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">sumāgadhāvadāna</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ma ga d+hA bzang mo'i rtogs pa brjod pa/</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <editor role="projectEditor" ref="eft:person-92">Laura Goetz</editor>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorMain" xml:id="UT22084-075-004-1">Sakya Pandita Translation Group</author>
+                <consultant role="projectManager" xml:id="UT22084-075-004-2">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-075-004-3">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-075-004-4">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <editor role="projectEditor" xml:id="UT22084-075-004-5">Laura Goetz</editor>
+                <author role="translatorEng" xml:id="UT22084-075-004-6">Ven. Khenpo Kalsang Gyaltsen</author>
+                <editor role="projectEditor" xml:id="UT22084-075-004-21">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -34,16 +36,42 @@
                     <idno source-id="O1JC114941JC12032" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-16T13:54:46.639Z" user="admin">16/09/2022 13:54:46</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-16T13:53:51.215Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-16T13:54:38.636Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-075-004-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-17T15:35:50.736Z" type="translation-status" status="2.h" xml:id="UT22084-075-004-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-17T15:35:50.736Z" type="text-version" status="0.0.2" xml:id="UT22084-075-004-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:51:50.014Z" type="translation-status" status="2.g" xml:id="UT22084-075-004-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:51:50.014Z" type="text-version" status="0.0.3" xml:id="UT22084-075-004-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:53:51.215Z" type="text-version" status="0.0.4" xml:id="UT22084-075-004-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:54:38.636Z" type="text-version" status="0.0.5" xml:id="UT22084-075-004-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-075-004-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T12:45:07.934Z" type="text-version" status="0.0.7" xml:id="UT22084-075-004-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:29:59.389Z" type="translation-status" status="2.f" xml:id="UT22084-075-004-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:29:59.389Z" type="text-version" status="0.0.8" xml:id="UT22084-075-004-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
