--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -7,17 +7,18 @@
                 <title type="mainTitle" xml:lang="en">Sūtra on the Benefits of the Five Precepts</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">pañcaśikṣānusaṃsasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bslab pa lnga'i phan yon gyi mdo/</title>
-                <author role="translatorMain" ref="eft:team-53"/>
-                <consultant role="projectManager" ref="eft:person-23">Bruno Galasek-Hul</consultant>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
-                <editor role="reviser" ref="eft:person-343">Stephen Jenkins</editor>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-034-025-1"/>
+                <consultant role="projectManager" xml:id="UT22084-034-025-2">Bruno Galasek-Hul</consultant>
+                <author role="translatorEng" xml:id="UT22084-034-025-3">Bruno Galasek-Hul</author>
+                <editor role="reviser" xml:id="UT22084-034-025-4">Stephen Jenkins</editor>
+                <editor role="associateEditor" xml:id="UT22084-034-025-5">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -32,21 +33,54 @@
                     <idno source-id="O1JC114941JC11556" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-07T07:47:58.1Z" user="admin">07/06/2023 07:47:58</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-09T14:18:48.286Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-09T14:20:29.626Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2020-10-09T14:31:27.468Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-30T13:08:04.733Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-06-07T07:47:53.827Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-07T07:47:53.827Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-09T14:15:24.786Z" type="translation-status" status="3" xml:id="UT22084-034-025-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:15:24.786Z" type="text-version" status="0.0.1" xml:id="UT22084-034-025-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:18:48.286Z" type="text-version" status="0.0.2" xml:id="UT22084-034-025-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:20:29.626Z" type="text-version" status="0.0.3" xml:id="UT22084-034-025-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:31:27.468Z" type="text-version" status="0.0.4" xml:id="UT22084-034-025-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-25T09:04:14.241Z" type="translation-status" status="2.h" xml:id="UT22084-034-025-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-25T09:04:14.241Z" type="text-version" status="0.0.5" xml:id="UT22084-034-025-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T13:07:29.076Z" type="translation-status" status="2.g" xml:id="UT22084-034-025-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T13:07:29.076Z" type="text-version" status="0.0.6" xml:id="UT22084-034-025-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T13:08:04.733Z" type="text-version" status="0.0.7" xml:id="UT22084-034-025-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-07T07:47:53.827Z" type="translation-status" status="2.f" xml:id="UT22084-034-025-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-07T07:47:53.827Z" type="text-version" status="0.0.8" xml:id="UT22084-034-025-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT22084-034-025-18">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:36:42.918Z" type="translation-status" status="2.d" xml:id="UT22084-034-025-19">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:36:42.918Z" type="text-version" status="0.0.10" xml:id="UT22084-034-025-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
