--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -4,22 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mya ngan med kyis byin pa lung bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aśokadattavyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Aśokadatta's Prophecy</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan med kyis byin pa lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">aśokadattavyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mya ngan med kyis byin pa lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ārya aśokadattavyākaraṇa­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-34"/>
-                <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
-                <author role="translatorEng" ref="contributors.xml#person-203">Jed Forman</author>
-                <consultant role="projectManager" ref="contributors.xml#person-203">Jed Forman</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan med kyis byin pa lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-043-013-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-013-2">ErdeneBaatar Erdene-Ochir</author>
+                <author role="translatorEng" xml:id="UT22084-043-013-3">Jed Forman</author>
+                <consultant role="projectManager" xml:id="UT22084-043-013-4">Jed Forman</consultant>
+                <editor role="projectEditor" xml:id="UT22084-043-013-5">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -34,17 +36,48 @@
                     <idno source-id="O1JC114941JC11617" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-28T09:32:50.852Z" user="admin">28/07/2023 09:32:50</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-12-09T08:13:26.929Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-09T08:13:26.929Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T10:45:16.921Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-04T10:45:46.452Z" user="line-tofte">Auto (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-06-29T13:46:50.609Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-29T13:46:50.609Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-29T13:54:16.168Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-07-28T09:32:46.594Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-07-28T09:32:46.594Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-12-09T08:13:26.929Z" type="translation-status" status="3" xml:id="UT22084-043-013-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-09T08:13:26.929Z" type="text-version" status="0.0.1" xml:id="UT22084-043-013-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:45:16.921Z" type="text-version" status="0.0.2" xml:id="UT22084-043-013-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:45:46.452Z" type="text-version" status="0.0.3" xml:id="UT22084-043-013-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-29T13:46:50.609Z" type="translation-status" status="2.h" xml:id="UT22084-043-013-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-29T13:46:50.609Z" type="text-version" status="0.0.4" xml:id="UT22084-043-013-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-29T13:54:16.168Z" type="text-version" status="0.0.5" xml:id="UT22084-043-013-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-28T09:32:46.594Z" type="translation-status" status="2.g" xml:id="UT22084-043-013-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-28T09:32:46.594Z" type="text-version" status="0.0.6" xml:id="UT22084-043-013-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-28T09:47:27.697Z" type="text-version" status="0.0.7" xml:id="UT22084-043-013-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-043-013-16">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:47:04.908Z" type="translation-status" status="2.f" xml:id="UT22084-043-013-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:47:04.908Z" type="text-version" status="0.0.9" xml:id="UT22084-043-013-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
