--- a/translations/kangyur/translations/090-007_toh563_upholding_the_great_secret_mantra.xml
+++ b/translations/kangyur/translations/090-007_toh563_upholding_the_great_secret_mantra.xml
@@ -25,7 +25,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-007-203">Michael Engle</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.14 <date>2023</date>
+                <edition>v 1.4.15 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -127,6 +127,9 @@
                 </change>
                 <change who="#celso" when="2023-09-20T20:23:14.83Z" type="text-version" status="1.4.14" xml:id="UT22084-090-007-228">
                     <desc>Activated pending links</desc>
+                </change>
+                <change who="#john" when="2023-09-25T19:23:38.26Z" type="text-version" status="1.4.15" xml:id="UT22084-090-007-231">
+                    <desc>Note added to cross-reference verses also in Tohs 41,42, and 331.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -663,7 +666,20 @@
                         <l>“Since in the world it is the bliss-gone arhats</l>
                         <l>To whom the moon goes for refuge,</l>
                         <l>Buddhas, with compassion for the world,</l>
-                        <l>Free the moon from Rāhu!</l>
+                        <l>Free the moon from Rāhu!<note place="end" xml:id="UT22084-090-007-230">Parallel versions of this and the following four or five stanzas are
+                            found in two of the “late translated” protection (<foreign xml:lang="Sa-Ltn">paritta</foreign>) sūtras of probable Theravādin origin in the Kangyur, 
+                            <title xml:lang="en">
+                                    <ptr target="#UT22084-034-029-47">The Sūtra of the Sun</ptr>
+                                </title> (Toh 41) 
+                            and <title xml:lang="en">
+                                    <ptr target="#UT22084-034-030-49">The Sūtra of the Moon (1)</ptr>
+                                </title> (Toh 42), 
+                            and in another of probable Mūlasarvāstivādin origin, <title xml:lang="en">
+                                    <ptr target="#UT22084-072-031-35">The 
+                                Sūtra of the Moon (2)</ptr>
+                                </title> (Toh 331). The story, very similar in all three works, helps to explain 
+                        what these verses are about.</note>
+                        </l>
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-090-007-43"/>
                     <lg tid="45">
