--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -10,7 +10,7 @@
                 <title type="mainTitle" xml:lang="zh">《幻師仁賢授記經》(大正藏:《大寶積經授幻師跋陀羅記會第二十一》</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-043-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-043-002-1">Kirtimukha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-002-2">Celso Wilkinson</author>
                 <author role="translatorEng" xml:id="UT22084-043-002-3">Laura Goetz</author>
                 <author role="translatorEng" xml:id="UT22084-043-002-4">Damchoe Wangmo, Lopon</author>
@@ -19,14 +19,15 @@
                 <consultant role="projectManager" xml:id="UT22084-043-002-7">Celso Wilkinson</consultant>
                 <editor role="projectEditor" xml:id="UT22084-043-002-8">Nathaniel Rich</editor>
                 <editor role="associateEditor" xml:id="UT22084-043-002-9">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-002-32">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2023</date>
+                <edition>v 0.1.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-29T13:55:38.367Z" type="text-version" status="0.1.7" xml:id="UT22084-043-002-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T13:56:11.867Z" type="text-version" status="0.1.8" xml:id="UT22084-043-002-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-26T08:30:16.809Z" type="translation-status" status="2.d" xml:id="UT22084-043-002-34">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-26T08:30:16.809Z" type="text-version" status="0.1.9" xml:id="UT22084-043-002-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
