--- a/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/translations/034-029_toh41-the_sutra_of_the_sun.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-029-156">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -31,7 +31,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -162,6 +162,12 @@
                 <change who="#john" when="2023-09-25T19:41:00.294Z" type="text-version" status="0.0.6" xml:id="UT22084-034-029-158">
                     <desc>Various edits prior to publication</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-09-26T21:39:05.433Z" type="translation-status" status="1.a" xml:id="UT22084-034-029-161">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-09-26T21:39:05.433Z" type="text-version" status="1.0.0" xml:id="UT22084-034-029-162">
+                    <desc>First published version</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -198,9 +204,6 @@
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
-                                <lb/>
-                                <milestone unit="chunk" xml:id="UT22084-034-029-5"/>
-                                <p tid="7">[Sponsored by XXXXXX]</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
@@ -237,9 +240,9 @@
                                                   grub</foreign>.</note> (1290–1364) <title xml:lang="en">History of Buddhism</title> and in
                                                 the Lithang, Degé, and Urga Kangyurs.<note place="end" xml:id="UT22084-034-029-11"> Skilling
                                                   1993, p. 73.</note> One of these sūtras, <title xml:lang="en">The Sūtra of the Moon (1)</title>
-                                                (Toh 42)<ref inst="untoggle following comment" rend="pending" target="https://read.84000.co/translation/toh42.html"/><!--<note place="end" xml:id="">Pema Yeshe De (2023), trans., <title xml:lang="en">
+                                                (Toh 42)<note place="end" xml:id="UT22084-034-029-159">Pema Yeshe De (2023), trans., <title xml:lang="en">
                                                                   <ref target="https://read.84000.co/translation/toh42.html">The Sūtra of the Moon (1)</ref>
-                                                          </title>, Toh 42 (84000: Translating the Words of the Buddha).</note>-->,
+                                                          </title>, Toh 42 (84000: Translating the Words of the Buddha).</note>,
                                                 presents an almost identical narrative concerning a
                                                 lunar eclipse. <title xml:lang="en">The Sūtra of the
                                                   Sun</title> features one additional verse not
@@ -258,17 +261,15 @@
                                                 but the extra verse that is missing in <title xml:lang="en">The Sūtra of the Moon (1)</title> is
                                                 represented in another similar discourse titled
                                                   <title xml:lang="en">The Sūtra of the Moon
-                                                  (2)</title> (Toh 331), <ref inst="untoggle following comment" rend="pending" target="https://read.84000.co/translation/toh331.html"/>
-                                                <!--<note place="end" xml:id="">Pema Yeshe De (2023), trans., <title xml:lang="en">
-                                                                  <ref target="https://read.84000.co/translation/toh331.html">The Sūtra of the Moon</ref>
-                                                          </title>, Toh 331 (84000: Translating the Words of the Buddha).</note>-->
+                                                  (2)</title> (Toh 331),<note place="end" xml:id="UT22084-034-029-160">Pema Yeshe De (2023), trans., <title xml:lang="en">
+                                                    <ref target="https://read.84000.co/translation/toh331.html">The Sūtra of the Moon (2)</ref>
+                                                          </title>, Toh 331 (84000: Translating the Words of the Buddha).</note>
                                                 which was translated from Sanskrit in the time of
                                                 the “early diffusion” of Buddhism to Tibet
                                                 (eighth–ninth centuries). <title xml:lang="en">The
                                                   Sūtra of the Moon (2)</title> has Sanskrit,
-                                                Chinese, and Old Uyghur parallels.<note place="end" xml:id="UT22084-034-029-13"> See the introduction
-                                                  to the <title xml:lang="en">Sūtra of the
-                                                  Moon</title>.</note>
+                                          Chinese, and Old Uyghur parallels.<note place="end" xml:id="UT22084-034-029-13"> See the <ptr target="#UT22084-072-031">introduction</ptr>                                                  
+                                            to the <title xml:lang="en">Sūtra of the Moon (2)</title>.</note>
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-034-029-14"/>
                                         <p tid="13">
@@ -476,9 +477,8 @@
                                                   lights up darkness and gloom, / The sun, circle of
                                                   mighty splendour. / Rāhu, do not swallow the sun
                                                   as he traverses the sky! / Rāhu, set my offspring,
-                                                  the sun, free!”). This verse is missing in Toh
-                                                  42<ref inst="add embedded link" rend="pending" target="http://read.84000.co/translation/toh42.htm"/> and in its Pali source, but it has a parallel
-                                                  in Toh 331<ref rend="pending" inst="add ptr tags for F.259.b" target="https://read.84000.co/translation/toh331.html"/> and in its Sanskrit and Chinese
+                                                  the sun, free!”). This verse is missing in <ref target="http://read.84000.co/translation/toh42.htm">Toh 42</ref> and in its Pali source, but it has a parallel
+                                                  in <ptr target="#UT22084-072-031-27">Toh 331</ptr> and in its Sanskrit and Chinese
                                                   counterparts.</note>
                         </l>
                                         </lg>
