--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -7,18 +7,19 @@
                 <title type="mainTitle" xml:lang="en">Sūtra on the Benefits of the Five Precepts</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">pañcaśikṣānusaṃsasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bslab pa lnga'i phan yon gyi mdo/</title>
-                <author role="translatorMain" xml:id="UT22084-034-025-1"/>
+                <author role="translatorMain" xml:id="UT22084-034-025-1">Anandaśrī Translation Team</author>
                 <consultant role="projectManager" xml:id="UT22084-034-025-2">Bruno Galasek-Hul</consultant>
                 <author role="translatorEng" xml:id="UT22084-034-025-3">Bruno Galasek-Hul</author>
                 <editor role="reviser" xml:id="UT22084-034-025-4">Stephen Jenkins</editor>
                 <editor role="associateEditor" xml:id="UT22084-034-025-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-034-025-26">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +79,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:36:42.918Z" type="text-version" status="0.0.10" xml:id="UT22084-034-025-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:37:23.781Z" type="text-version" status="0.0.11" xml:id="UT22084-034-025-27">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-27T08:53:26.59Z" type="translation-status" status="2.c" xml:id="UT22084-034-025-28">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-27T08:53:26.59Z" type="text-version" status="0.0.12" xml:id="UT22084-034-025-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
