--- a/translations/kangyur/placeholders/083-018_toh470-the_tantra_of_the_practice_of_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/083-018_toh470-the_tantra_of_the_practice_of_vajrabhairava.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed kyi rtog pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrabhairavakalpatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje 'jigs byed kyi rtog pa'i rgyud kyi rgyal po/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-083-018-1"/>
+                <author role="translatorEng" xml:id="UT22084-083-018-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-018"/>
                 <date/>
             </publicationStmt>
@@ -32,13 +33,30 @@
                     <idno source-id="O1JC114941JC12182" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:06:02.014Z" user="admin">30/06/2022 13:06:02</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:05:18.414Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:05:18.414Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:05:54.179Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-083-018-3">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:05:18.414Z" type="translation-status" status="3" xml:id="UT22084-083-018-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:05:18.414Z" type="text-version" status="0.0.2" xml:id="UT22084-083-018-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:05:54.179Z" type="text-version" status="0.0.3" xml:id="UT22084-083-018-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-083-018-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-27T09:25:14.703Z" type="translation-status" status="2.h" xml:id="UT22084-083-018-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-27T09:25:14.703Z" type="text-version" status="0.0.5" xml:id="UT22084-083-018-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
