--- a/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
+++ b/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
@@ -39,7 +39,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -208,6 +208,9 @@
                 </change>
                 <change who="#sameer" when="2023-09-16T11:55:51.886Z" type="text-version" status="1.0.4" xml:id="UT22084-071-011-214">
                     <desc>Included in App v 3.6</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-09-27T21:36:37.287Z" type="text-version" status="1.0.5" xml:id="UT22084-071-011-215">
+                    <desc>Updated typo.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -535,7 +538,7 @@
                                                 not from being learned.’ ” <ref cRef="F.297.b" type="folio" xml:id="UT22084-071-011-149"/>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-071-011-38"/>
-                                        <p tid="32">“Ānanda, it thus! It is thus! Whatever dangers
+                                        <p tid="32">“Ānanda, it is thus! It is thus! Whatever dangers
                                                 arise, all of them arise from foolishness, not from
                                                 being learned. Whatever calamity, whatever harm,
                                                 contagious illness, or conflict arises, all of them
