--- a/translations/kangyur/placeholders/085-008_toh488-a_section_of_the_chapter_on_mantras_of_the_supreme.xml
+++ b/translations/kangyur/placeholders/085-008_toh488-a_section_of_the_chapter_on_mantras_of_the_supreme.xml
@@ -15,11 +15,12 @@
                 <title type="otherTitle" xml:lang="zh">（大正藏：佛說最上根本大樂金剛不空三昧大教王經第十四分至第二十五分)</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-085-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,13 +34,25 @@
                     <idno source-id="O1JC114941JC12204" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-04T22:20:33.357Z" user="admin">04/08/2021 22:20:33</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
-                    increment</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-04T22:20:29.882Z" user="mike">summary added</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-085-008-1">
+                    <desc>Automated version
+                    increment</desc>
+                </change>
+                <change who="#mike" when="2021-08-04T22:20:29.882Z" type="text-version" status="0.0.2" xml:id="UT22084-085-008-2">
+                    <desc>summary added</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-085-008-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:25:16.348Z" type="translation-status" status="3" xml:id="UT22084-085-008-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:25:16.348Z" type="text-version" status="0.0.4" xml:id="UT22084-085-008-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
