--- a/translations/kangyur/placeholders/086-004_toh493-the_sutra_of_the_secret_jewel_ornament.xml
+++ b/translations/kangyur/placeholders/086-004_toh493-the_sutra_of_the_secret_jewel_ornament.xml
@@ -12,10 +12,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gsang ba nor bu thig le zhes bya ba'i mdo/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-086-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -29,9 +30,19 @@
                     <idno source-id="O1JC114941JC12211" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:18:51.728Z" user="admin">09/06/2022 15:18:51</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-086-004-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:26:29.531Z" type="translation-status" status="3" xml:id="UT22084-086-004-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:26:29.531Z" type="text-version" status="0.0.3" xml:id="UT22084-086-004-3">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
