--- a/translations/kangyur/placeholders/091-079_toh681-the_web_of_lotuses_the_root_tantra_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-079_toh681-the_web_of_lotuses_the_root_tantra_of_avalokitesvara.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvara­padmajāla­mūlatantrarājanāma</title>
                 <title type="otherTitle" xml:lang="zh">《觀自在根本續王蓮華網》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi rtsa ba'i rgyud kyi rgyal po pad+ma dra ba zhes bya ba/</title>
-                <sponsor ref="sponsors.xml#sponsor-15"/>
+                <sponsor xml:id="UT22084-091-079-1"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-079"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,10 +32,21 @@
                     <idno source-id="O1JC114941JC12419" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-01T13:34:34.26Z" user="admin">01/11/2022 13:34:34</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:40:20.975Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#cabie-sim" when="2022-07-26T07:40:20.975Z" type="text-version" status="0.0.1" xml:id="UT22084-091-079-2">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-091-079-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:33:56.735Z" type="translation-status" status="3" xml:id="UT22084-091-079-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:33:56.735Z" type="text-version" status="0.0.3" xml:id="UT22084-091-079-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
