--- a/translations/tengyur/placeholders/027-001_toh1661-srisarvabuddhasamayogatantranamapanjika.xml
+++ b/translations/tengyur/placeholders/027-001_toh1661-srisarvabuddhasamayogatantranamapanjika.xml
@@ -9,16 +9,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Śrī­sarva­buddha­samayoga­nāma­tantra­pañjikā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Tantra known as “The Glorious Union of All the Buddhas”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-027-001"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1661" type="text">
                     <ref>Toh 1661</ref>
                     <biblScope>ff. 1v-19v</biblScope>
-                    <author ref="eft:entity-17567" xml:lang="Sa-Ltn">Indrabhūti</author>
-                    <author role="translatorTib" ref="eft:entity-17459" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
-                    <author role="translatorTib" ref="eft:entity-17476" xml:lang="Sa-Ltn">Śraddhākaravarman</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-027-001-1">Indrabhūti</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-027-001-2">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-027-001-3">Śraddhākaravarman</author>
                     <location work="UT23703" count-pages="37">
                         <volume number="27" start-page="2" end-page="38"/>
                     </location>
@@ -28,10 +29,21 @@
                 <link type="isCommentaryOf" target="toh366"/>
                 <link type="isCommentaryOf" target="toh367"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:00:01 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1607-1682_PH_new_v2.4.xml" date-time="2021-11-02T13:27:55.711Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:27:55.711Z" type="import" xml:id="UT23703-027-001-4" source="tengyur-data-1607-1682_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-027-001-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:35:04.56Z" type="translation-status" status="3" xml:id="UT23703-027-001-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:35:04.56Z" type="text-version" status="0.0.1" xml:id="UT23703-027-001-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
