--- a/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
+++ b/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
@@ -9,15 +9,16 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­kalpa­samuccaya­nāma­sarva­buddha­samayoga­ḍākinījāla­śambarottara­tantra­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Continuation Tantra of the Ḍākinījālaśaṃvara, the Union of All the Buddhas known as “The Complete Collection of Ceremonial Rituals”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-027-002"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1662" type="text">
                     <ref>Toh 1662</ref>
                     <biblScope>ff. 19v-58v</biblScope>
-                    <author ref="eft:entity-17901" xml:lang="Sa-Ltn">Ānandagarbha</author>
-                    <author role="translatorTib" ref="eft:entity-17863" xml:lang="Sa-Ltn">Smṛtijñānakīrti</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-027-002-1">Ānandagarbha</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-027-002-2">Smṛtijñānakīrti</author>
                     <location work="UT23703" count-pages="79">
                         <volume number="27" start-page="38" end-page="116"/>
                     </location>
@@ -27,10 +28,21 @@
                 <link type="isCommentaryOf" target="toh366"/>
                 <link type="isCommentaryOf" target="toh367"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:59:28 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1607-1682_PH_new_v2.4.xml" date-time="2021-11-02T13:27:55.711Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:27:55.711Z" type="import" xml:id="UT23703-027-002-3" source="tengyur-data-1607-1682_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:36:50.578Z" type="translation-status" status="3" xml:id="UT23703-027-002-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:36:50.578Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
