--- a/translations/kangyur/placeholders/035-026_toh44-26-chapter_26_the_teaching_on_the_bodhisattvas_practice.xml
+++ b/translations/kangyur/placeholders/035-026_toh44-26-chapter_26_the_teaching_on_the_bodhisattvas_practice.xml
@@ -9,10 +9,11 @@
                 <title type="otherTitle" xml:lang="zh">菩薩行品/功德華聚菩薩十行品/十行品</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-026"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,10 +27,21 @@
                     <idno source-id="O1JC114941JC14694" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:16:50.039Z" user="admin">10/05/2021 17:16:50</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T17:16:47.248Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T17:16:47.248Z" type="text-version" status="0.0.1" xml:id="UT22084-035-026-1">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-035-026-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:50:51.321Z" type="translation-status" status="3" xml:id="UT22084-035-026-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:50:51.321Z" type="text-version" status="0.0.3" xml:id="UT22084-035-026-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
